--- a/templates/exportimport/invoice.html
+++ b/templates/exportimport/invoice.html
@@ -440,7 +440,7 @@ body {
         </div>
         <div class="cell">
             <div class="cell-label center">No. of Package</div>
-            <div class="cell-value bold">1</div>
+            <div class="cell-value bold">{{ shipment.quantity|default:1 }}</div>
         </div>
         <div class="cell">
             <div class="cell-label center">Actual Weight (Kgs)</div>
